--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -1,333 +1,358 @@
 ---
 title: "Working with TCGAbiolinks package"
-author: " Antonio Colaprico, Tiago Chedraoui Silva, Luciano Garofano, 
+author: "Antonio Colaprico, Tiago Chedraoui Silva, Luciano Garofano, 
 Catharina Olsen, Davide Garolini, Claudia Cava, Isabella Castiglioni,
 Thais Sarraf Sabedot, Tathiane Maistro Malta, Stefano Pagnotta, Michele Ceccarelli,
 Gianluca Bontempi, Houtan Noushmehr"
 date: "`r Sys.Date()`"
 output: 
-BiocStyle::html_document:
-toc: true
-number_sections: false
-toc_depth: 2
-highlight: haddock
-
+    BiocStyle::html_document:
+        toc: true
+        number_sections: false
+        toc_depth: 2
+        highlight: haddock
 
 references:
 - id: ref1
-title: Orchestrating high-throughput genomic analysis with Bioconductor
-author: 
-- family: Huber, Wolfgang and Carey, Vincent J and Gentleman, Robert and Anders, Simon and Carlson, Marc and Carvalho, Benilton S and Bravo, Hector Corrada and Davis, Sean and Gatto, Laurent and Girke, Thomas and others
-given:
-journal: Nature methods
-volume: 12
-number: 2
-pages: 115-121
-issued:
-year: 2015
+  title: Orchestrating high-throughput genomic analysis with Bioconductor
+  author: 
+  - family: Huber, Wolfgang and Carey, Vincent J and Gentleman, Robert and Anders, Simon and Carlson, Marc and Carvalho, Benilton S and Bravo, Hector Corrada and Davis, Sean and Gatto, Laurent and Girke, Thomas and others
+    given:
+  journal: Nature methods
+  volume: 12
+  number: 2
+  pages: 115-121
+  issued:
+    year: 2015
 
 - id: ref2
-title: GC-content normalization for RNA-Seq data
-author: 
-- family: Risso, Davide and Schwartz, Katja and Sherlock, Gavin and Dudoit, Sandrine
-given:
-journal: BMC bioinformatics
-volume: 12
-number: 1
-pages: 480
-issued:
-year: 2011 
-
+  title: GC-content normalization for RNA-Seq data
+  author: 
+  - family: Risso, Davide and Schwartz, Katja and Sherlock, Gavin and Dudoit, Sandrine
+    given:
+  journal: BMC bioinformatics
+  volume: 12
+  number: 1
+  pages: 480
+  issued:
+    year: 2011 
+    
 - id: ref3
-title: Evaluation of statistical methods for normalization and differential expression in mRNA-Seq experiments
-author: 
-- family: Bullard, James H and Purdom, Elizabeth and Hansen, Kasper D and Dudoit, Sandrine
-given:
-journal: BMC bioinformatics
-volume: 11
-number: 1
-pages: 94
-issued:
-year: 2010 
+  title: Evaluation of statistical methods for normalization and differential expression in mRNA-Seq experiments
+  author: 
+  - family: Bullard, James H and Purdom, Elizabeth and Hansen, Kasper D and Dudoit, Sandrine
+    given:
+  journal: BMC bioinformatics
+  volume: 11
+  number: 1
+  pages: 94
+  issued:
+    year: 2010 
 
 - id: ref4
-title: Inferring regulatory element landscapes and transcription factor networks from cancer methylomes
-author: 
-- family: Yao, L., Shen, H., Laird, P. W., Farnham, P. J., & Berman, B. P. 
-given:
-journal: Genome biology
-volume: 16
-number: 1
-pages: 105
-issued:
-year: 2015 
+  title: Inferring regulatory element landscapes and transcription factor networks from cancer methylomes
+  author: 
+  - family: Yao, L., Shen, H., Laird, P. W., Farnham, P. J., & Berman, B. P. 
+    given:
+  journal: Genome biology
+  volume: 16
+  number: 1
+  pages: 105
+  issued:
+    year: 2015 
 
 - id: ref5
-title: Evaluation of statistical methods for normalization and differential expression in mRNA-Seq experiments
-author: 
-- family:  James H Bullard, Elizabeth Purdom, Kasper D Hansen and Sandrine Dudoit	
-given:
-journal: BMC Bioinformatics
-volume: 11
-number: 1
-pages: 94
-issued:
-year: 2010 
+  title: Evaluation of statistical methods for normalization and differential expression in mRNA-Seq experiments
+  author: 
+  - family:  James H Bullard, Elizabeth Purdom, Kasper D Hansen and Sandrine Dudoit	
+    given:
+  journal: BMC Bioinformatics
+  volume: 11
+  number: 1
+  pages: 94
+  issued:
+    year: 2010 
 
 - id: ref6
-title: GC-content normalization for RNA-Seq data
-author: 
-- family: Risso, D., Schwartz, K., Sherlock, G., & Dudoit, S. 
-given:
-journal: BMC Bioinformatics
-volume: 12
-number: 1
-pages: 480
-issued:
-year: 2011 
+  title: GC-content normalization for RNA-Seq data
+  author: 
+  - family: Risso, D., Schwartz, K., Sherlock, G., & Dudoit, S. 
+    given:
+  journal: BMC Bioinformatics
+  volume: 12
+  number: 1
+  pages: 480
+  issued:
+    year: 2011 
 
 - id: ref7
-title: Identification of a CpG island methylator phenotype that defines a distinct subgroup of glioma
-author: 
-- family: Noushmehr, H., Weisenberger, D.J., Diefes, K., Phillips, H.S., Pujara, K., Berman, B.P., Pan, F., Pelloski, C.E., Sulman, E.P., Bhat, K.P. et al.
-given:
-journal: Cancer cell
-volume: 17
-number: 5
-pages: 510-522
-issued:
-year: 2010
+  title: Identification of a CpG island methylator phenotype that defines a distinct subgroup of glioma
+  author: 
+  - family: Noushmehr, H., Weisenberger, D.J., Diefes, K., Phillips, H.S., Pujara, K., Berman, B.P., Pan, F., Pelloski, C.E., Sulman, E.P., Bhat, K.P. et al.
+    given:
+  journal: Cancer cell
+  volume: 17
+  number: 5
+  pages: 510-522
+  issued:
+    year: 2010
 
 - id: ref8
-title: Molecular Profiling Reveals Biologically Discrete Subsets and Pathways of Progression in Diffuse Glioma
-author: 
-- family: Ceccarelli, Michele and Barthel, Floris P and Malta, Tathiane M and Sabedot, Thais S and Salama, Sofie R and Murray, Bradley A and Morozova, Olena and Newton, Yulia and Radenbaugh, Amie and Pagnotta, Stefano M and others
-given:
-journal: Cell
-URL: "http://doi.org/10.1016/j.cell.2015.12.028"
-DOI: "10.1016/j.cell.2015.12.028"
-volume: 164
-number: 3
-pages: 550-563
-issued:
-year: 2016
+  title: Molecular Profiling Reveals Biologically Discrete Subsets and Pathways of Progression in Diffuse Glioma
+  author: 
+  - family: Ceccarelli, Michele and Barthel, Floris P and Malta, Tathiane M and Sabedot, Thais S and Salama, Sofie R and Murray, Bradley A and Morozova, Olena and Newton, Yulia and Radenbaugh, Amie and Pagnotta, Stefano M and others
+    given:
+  journal: Cell
+  URL: "http://doi.org/10.1016/j.cell.2015.12.028"
+  DOI: "10.1016/j.cell.2015.12.028"
+  volume: 164
+  number: 3
+  pages: 550-563
+  issued:
+    year: 2016
 
 
 - id: ref9
-title: Comprehensive molecular profiling of lung adenocarcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature13385"
-DOI: "10.1038/nature13385"
-volume: 511
-number: 7511
-pages: 543-550
-issued:
-year: 2014
+  title: Comprehensive molecular profiling of lung adenocarcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature13385"
+  DOI: "10.1038/nature13385"
+  volume: 511
+  number: 7511
+  pages: 543-550
+  issued:
+    year: 2014
 
 
 - id: ref10
-title: Comprehensive molecular characterization of gastric adenocarcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature13480"
-DOI: "10.1038/nature13480"
-issued:
-year: 2014
+  title: Comprehensive molecular characterization of gastric adenocarcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature13480"
+  DOI: "10.1038/nature13480"
+  issued:
+    year: 2014
 
 - id: ref11
-title: Comprehensive molecular portraits of human breast tumours
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature11412"
-DOI: "10.1038/nature11412"
-volume: 490
-number: 7418
-pages: 61-70
-issued:
-year: 2012
-
+  title: Comprehensive molecular portraits of human breast tumours
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature11412"
+  DOI: "10.1038/nature11412"
+  volume: 490
+  number: 7418
+  pages: 61-70
+  issued:
+    year: 2012
+  
 - id: ref12
-title: Comprehensive molecular characterization of human colon and rectal cancer
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature11252"
-DOI: "10.1038/nature11252"
-volume: 487
-number: 7407
-pages: 330-337
-issued:
-year: 2012    
+  title: Comprehensive molecular characterization of human colon and rectal cancer
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature11252"
+  DOI: "10.1038/nature11252"
+  volume: 487
+  number: 7407
+  pages: 330-337
+  issued:
+    year: 2012    
 
 - id: ref13
-title: Genomic classification of cutaneous melanoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Cell
-URL: "http://doi.org/10.1016/j.cell.2015.05.044"
-DOI: "10.1016/j.cell.2015.05.044"
-volume: 161
-number: 7
-pages: 1681-1696
-issued:
-year: 2015    
+  title: Genomic classification of cutaneous melanoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Cell
+  URL: "http://doi.org/10.1016/j.cell.2015.05.044"
+  DOI: "10.1016/j.cell.2015.05.044"
+  volume: 161
+  number: 7
+  pages: 1681-1696
+  issued:
+    year: 2015    
 
 - id: ref14
-title: Comprehensive genomic characterization of head and neck squamous cell carcinomas
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature14129"
-DOI: "10.1038/nature14129"
-volume: 517
-number: 7536
-pages: 576-582
-issued:
-year: 2015    
+  title: Comprehensive genomic characterization of head and neck squamous cell carcinomas
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature14129"
+  DOI: "10.1038/nature14129"
+  volume: 517
+  number: 7536
+  pages: 576-582
+  issued:
+    year: 2015    
 
 - id: ref15
-title: The somatic genomic landscape of chromophobe renal cell carcinoma
-author: 
-- family: Davis, Caleb F and Ricketts, Christopher J and Wang, Min and Yang, Lixing and Cherniack, Andrew D and Shen, Hui and Buhay, Christian and Kang, Hyojin and Kim, Sang Cheol and Fahey, Catherine C and others
-given:
-journal: Cancer Cell
-URL: "http://doi.org/10.1016/j.ccr.2014.07.014"
-DOI: "10.1016/j.ccr.2014.07.014"
-volume: 26
-number: 3
-pages: 319-330
-issued:
-year: 2014    
+  title: The somatic genomic landscape of chromophobe renal cell carcinoma
+  author: 
+  - family: Davis, Caleb F and Ricketts, Christopher J and Wang, Min and Yang, Lixing and Cherniack, Andrew D and Shen, Hui and Buhay, Christian and Kang, Hyojin and Kim, Sang Cheol and Fahey, Catherine C and others
+    given:
+  journal: Cancer Cell
+  URL: "http://doi.org/10.1016/j.ccr.2014.07.014"
+  DOI: "10.1016/j.ccr.2014.07.014"
+  volume: 26
+  number: 3
+  pages: 319-330
+  issued:
+    year: 2014    
 
 
 - id: ref16
-title: Comprehensive genomic characterization of squamous cell lung cancers
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature11404"
-DOI: "10.1038/nature11404"
-volume: 489
-number: 7417
-pages: 519-525
-issued:
-year: 2012   
+  title: Comprehensive genomic characterization of squamous cell lung cancers
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature11404"
+  DOI: "10.1038/nature11404"
+  volume: 489
+  number: 7417
+  pages: 519-525
+  issued:
+    year: 2012   
 
 - id: ref17
-title: Integrated genomic characterization of endometrial carcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature12113"
-DOI: "10.1038/nature12113"
-volume: 497
-number: 7447
-pages: 67-73
-issued:
-year: 2013   
+  title: Integrated genomic characterization of endometrial carcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature12113"
+  DOI: "10.1038/nature12113"
+  volume: 497
+  number: 7447
+  pages: 67-73
+  issued:
+    year: 2013   
 
 - id: ref18
-title: Integrated genomic characterization of papillary thyroid carcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Cell
-URL: "http://doi.org/10.1016/j.cell.2014.09.050"
-DOI: "10.1016/j.cell.2014.09.050"
-volume: 159
-number: 3
-pages: 676-690
-issued:
-year: 2014   
+  title: Integrated genomic characterization of papillary thyroid carcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Cell
+  URL: "http://doi.org/10.1016/j.cell.2014.09.050"
+  DOI: "10.1016/j.cell.2014.09.050"
+  volume: 159
+  number: 3
+  pages: 676-690
+  issued:
+    year: 2014   
 
 - id: ref19
-title: The molecular taxonomy of primary prostate cancer
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Cell
-URL: "http://doi.org/10.1016/j.cell.2015.10.025"
-DOI: "10.1016/j.cell.2015.10.025"
-volume: 163
-number: 4
-pages: 1011-1025
-issued:
-year: 2015   
-
+  title: The molecular taxonomy of primary prostate cancer
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Cell
+  URL: "http://doi.org/10.1016/j.cell.2015.10.025"
+  DOI: "10.1016/j.cell.2015.10.025"
+  volume: 163
+  number: 4
+  pages: 1011-1025
+  issued:
+    year: 2015   
+    
 
 - id: ref20
-title: Comprehensive Molecular Characterization of Papillary Renal-Cell Carcinoma
-author: 
-- family: Linehan, W Marston and Spellman, Paul T and Ricketts, Christopher J and Creighton, Chad J and Fei, Suzanne S and Davis, Caleb and Wheeler, David A and Murray, Bradley A and Schmidt, Laura and Vocke, Cathy D and others
-given:
-journal: NEW ENGLAND JOURNAL OF MEDICINE
-URL: "http://doi.org/10.1056/NEJMoa1505917"
-DOI: "10.1056/NEJMoa1505917"
-volume: 374
-number: 2
-pages: 135-145
-issued:
-year: 2016    
-
+  title: Comprehensive Molecular Characterization of Papillary Renal-Cell Carcinoma
+  author: 
+  - family: Linehan, W Marston and Spellman, Paul T and Ricketts, Christopher J and Creighton, Chad J and Fei, Suzanne S and Davis, Caleb and Wheeler, David A and Murray, Bradley A and Schmidt, Laura and Vocke, Cathy D and others
+    given:
+  journal: NEW ENGLAND JOURNAL OF MEDICINE
+  URL: "http://doi.org/10.1056/NEJMoa1505917"
+  DOI: "10.1056/NEJMoa1505917"
+  volume: 374
+  number: 2
+  pages: 135-145
+  issued:
+    year: 2016    
+    
 - id: ref21
-title: Comprehensive molecular characterization of clear cell renal cell carcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Nature
-URL: "http://doi.org/10.1038/nature12222"
-DOI: "10.1038/nature12222"
-volume: 499
-number: 7456
-pages: 43-49
-issued:
-year: 2013        
-
+  title: Comprehensive molecular characterization of clear cell renal cell carcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Nature
+  URL: "http://doi.org/10.1038/nature12222"
+  DOI: "10.1038/nature12222"
+  volume: 499
+  number: 7456
+  pages: 43-49
+  issued:
+    year: 2013        
+          
 - id: ref22
-title: Comprehensive Pan-Genomic Characterization of Adrenocortical Carcinoma
-author: 
-- family: Cancer Genome Atlas Research Network and others
-given:
-journal: Cancer Cell
-URL: "http://dx.doi.org/10.1016/j.ccell.2016.04.002"
-DOI: "10.1016/j.ccell.2016.04.002"
-volume: 29
-pages: 43-49
-issued:
-year: 2016 
-
+  title: Comprehensive Pan-Genomic Characterization of Adrenocortical Carcinoma
+  author: 
+  - family: Cancer Genome Atlas Research Network and others
+    given:
+  journal: Cancer Cell
+  URL: "http://dx.doi.org/10.1016/j.ccell.2016.04.002"
+  DOI: "10.1016/j.ccell.2016.04.002"
+  volume: 29
+  pages: 43-49
+  issued:
+    year: 2016 
 
 - id: ref23
-title: Complex heatmaps reveal patterns and correlations in multidimensional genomic data
-author: 
-- family: Gu, Zuguang and Eils, Roland and Schlesner, Matthias
-given:
-journal: Bioinformatics
-URL: "http://dx.doi.org/10.1016/j.ccell.2016.04.002"
-DOI: "10.1016/j.ccell.2016.04.002"
-pages: "btw313"
-issued:
-year: 2016 
+  title: Complex heatmaps reveal patterns and correlations in multidimensional genomic data
+  author: 
+  - family: Gu, Zuguang and Eils, Roland and Schlesner, Matthias
+  given:
+  journal: Bioinformatics
+  URL: "http://dx.doi.org/10.1016/j.ccell.2016.04.002"
+  DOI: "10.1016/j.ccell.2016.04.002"
+  pages: "btw313"
+  issued:
+   year: 2016 
+
+- id: ref24
+  title: "TCGA Workflow: Analyze cancer genomics and epigenomics data using Bioconductor packages"
+  author: 
+  - family:  Silva, TC and Colaprico, A and Olsen, C and D'Angelo, F and Bontempi, G and Ceccarelli, M and Noushmehr, H
+  given:
+  journal: F1000Research
+  URL: "http://dx.doi.org/10.12688/f1000research.8923.1"
+  DOI: "10.12688/f1000research.8923.1"
+  volume: 5
+  number: 1542
+  issued:
+   year: 2016 
+
+- id: ref25
+  title: "TCGAbiolinks: an R/Bioconductor package for integrative analysis of TCGA data"
+  author: 
+  - family:  Colaprico, Antonio and Silva, Tiago C. and Olsen, Catharina and Garofano, Luciano and Cava, Claudia and Garolini, Davide and Sabedot, Thais S. and Malta, Tathiane M. and Pagnotta, Stefano M. and Castiglioni, Isabella and Ceccarelli, Michele and Bontempi, Gianluca and Noushmehr, Houtan
+  given:
+  journal: Nucleic Acids Research
+  URL: "http://dx.doi.org/10.1093/nar/gkv1507"
+  DOI: "10.1093/nar/gkv1507"
+  volume: 44
+  number: 8
+  pages: e71
+  issued:
+   year: 2016 
 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
-  ---
+---
   
-  ```{r setup, include=FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(dpi = 300)
 knitr::opts_chunk$set(cache=FALSE)
 ```
@@ -398,7 +423,11 @@ biocLite("TCGAbiolinks")
 
 Please cite TCGAbiolinks package: 
 
-* Colaprico A, Silva TC, Olsen C, Garofano L, Cava C, Garolini D, Sabedot T, Malta TM, Pagnotta SM, Castiglioni I, Ceccarelli M, Bontempi G and Noushmehr H. "TCGAbiolinks: an R/Bioconductor package for integrative analysis of TCGA data." Nucleic acids research (2015): gkv1507.
+* "TCGAbiolinks: an R/Bioconductor package for integrative analysis of TCGA data." Nucleic acids research (2015): [gkv1507](http://dx.doi.org/doi:10.1093/nar/gkv1507). [@ref25]
+
+Related publications to this package:
+
+* "TCGA Workflow: Analyze cancer genomics and epigenomics data using Bioconductor packages". F1000Research [10.12688/f1000research.8923.1](http://dx.doi.org/doi:10.12688/f1000research.8923.1) [@ref24]
 
 Also, if you have used ELMER analysis please cite:
 
@@ -1457,7 +1486,7 @@ Using the data and calculating the mean DNA methylation per group, it is possibl
 to create a mean DNA methylation boxplot with the function 
 `TCGAvisualize_meanMethylation` as follows:
 
-```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
+```{r,include=FALSE,echo=FALSE, fig.height=5, message=FALSE, warning=FALSE}
 query <- GDCquery(project = "TCGA-GBM",
                   data.category = "DNA methylation",
                   platform = "Illumina Human Methylation 27",
@@ -1468,6 +1497,22 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
 GDCDownload(query)
 data <- GDCPrepare(query)
+```
+
+```{r, eval=FALSE, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
+query <- GDCquery(project = "TCGA-GBM",
+                  data.category = "DNA methylation",
+                  platform = "Illumina Human Methylation 27",
+                  legacy = TRUE, 
+                  barcode = c("TCGA-02-0058-01A-01D-0186-05", "TCGA-12-1597-01B-01D-0915-05",
+                              "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
+                              "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
+                              "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
+GDCDownload(query)
+data <- GDCPrepare(query)
+```
+
+```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
 # "shortLetterCode" is a column in the SummarizedExperiment::colData(data) matrix
 TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL)
 ```
@@ -2166,13 +2211,18 @@ We used only the samples that had a classification in the examples.
 #------------------------------------------
 # 2.4 - Starburst plot
 # -----------------------------------------
+# If true the argument names of the geenes in circle 
+# (biologically significant genes, has a change in gene
+# expression and DNA methylation and respects all the thresholds)
+# will be shown
+# these genes are returned by the function see starburst object after the function is executed
 starburst <- TCGAvisualize_starburst(acc.met, dataDEGs,"CIMP-high","CIMP-low",
                                      filename = "starburst.png",
                                      met.p.cut = 10^-5,
                                      exp.p.cut = 10^-5,
                                      diffmean.cut = 0.25,
                                      logFC.cut = 3,
-                                     names = TRUE,
+                                     names = FALSE, 
                                      height=10,
                                      width=15,
                                      dpi=300)
@@ -2372,7 +2422,7 @@ gene expression vs DNA methylation at this probe. The result of this is
 show by the ELMER scatter plot.
 
 ```{r,eval=FALSE,echo=TRUE,message=FALSE,warning=FALSE}
-scatter.plot(mee,byProbe=list(probe=c("cg00328720"),geneNum=20), category="TN")
+scatter.plot(mee,byProbe=list(probe=c("cg00328720"),geneNum=20), category="TN", lm_line = TRUE)
 ```
 
 The result is shown below:
@@ -2383,11 +2433,11 @@ img <- readPNG("case4_elmer.png")
 grid.raster(img)
 ```
 
-Each scatter plot showing the average DNA methylation level of sites with the AP1 motif in all KIRC samples plotted against the expression of the transcription factor CEBPB and GFI1 respectively.
+Each scatter plot showing the average DNA methylation level of sites with the UA6 motif in all KIRC samples plotted against the expression of the transcription factor ZNF677 and PEG3 respectively.
 ```{r,eval=FALSE,echo=TRUE,message=FALSE,warning=FALSE}
-scatter.plot(mee,byTF = list(TF = c("CEBPB","GFI1"),
-                             probe = enriched.motif[["AP1"]]), category = "TN",
-             save = TRUE, lm_line = TRUE, dir.out = "kirc")
+scatter.plot(mee,byTF = list(TF = c("ZNF677","PEG3"),
+                          probe = enriched.motif[["UA6"]]), category = "TN",
+                          save = TRUE, lm_line = TRUE, dir.out = "kirc")
 ```
 
 The result is shown below:
@@ -2404,7 +2454,7 @@ The genes significantly linked to the probe were shown in red.
 ```{r,eval=FALSE,echo=TRUE,message=FALSE,warning=FALSE}
 pair <- fetch.pair(pair="./kirc/getPair.hypo.pairs.significant.csv",
                    probeInfo = mee@probeInfo, geneInfo = mee@geneInfo)
-schematic.plot(pair=pair, byProbe="cg14613594",save=FALSE)
+schematic.plot(pair=pair, byProbe="cg15862394",save=FALSE)
 ```
 The result is shown below:
 ```{r, fig.width=6, fig.height=4, echo = FALSE, fig.align="center",hide=TRUE, message=FALSE,warning=FALSE}
@@ -2421,13 +2471,6 @@ The range shows the 95% confidence interval for each Odds Ratio.
 library(png)
 library(grid)
 img <- readPNG("elmer3.png")
-grid.raster(img)
-```
-
-```{r, fig.width=6, fig.height=4, echo = FALSE, fig.align="center",hide=TRUE, message=FALSE,warning=FALSE}
-library(png)
-library(grid)
-img <- readPNG("elmer4.png")
 grid.raster(img)
 ```
 
