considering the source in the file names. to know which ones were aligned against hg38 and hg19
Former-commit-id: c7e858c60ef7393ac4492650de279acb7b4d8f1c [formerly a07984c42b2042786789b44ecf93935c001a19b3]
Former-commit-id: dceb1d3e8fa161efdf33b760a3141d39b353b364

--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -777,7 +777,7 @@ It uses GDC transfer tool to download gdc data doing a system call.
 For this reason some times the update will stop to show, which does not means that 
 the download process has stopped. Once the process has finished it will give a signal to R.
 
-The data from query will be save in a folder: project/data.category
+The data from query will be save in a folder: project/source/data.category (where source is harmonized or legacy)
 
 The arguments are:
 
