fixing to windows
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/TCGAbiolinks@119806 bc3139a8-67e5-0310-9ffc-ced21a209358

Former-commit-id: 79b9c2e830f10cc75f396d185997c2595d0d436e [formerly 2bc7c8bdde94bd80a7f0bdad6d56571614044ac5]
Former-commit-id: ccc42ad3934176ef14cf755fccd57d5773811bd0

--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -1496,7 +1496,7 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
                               "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
-GDCdownload(query)
+GDCdownload(query, method = "client")
 data <- GDCprepare(query)
 ```
 
@@ -1509,7 +1509,7 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
                               "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
-GDCdownload(query)
+GDCdownload(query, method = "client")
 data <- GDCprepare(query)
 ```
 
